--- a/src/datasets/MD_MATL/pbt_aspects.yml
+++ b/src/datasets/MD_MATL/pbt_aspects.yml
@@ -2,7 +2,14 @@ version: 1
 schema:
   type: struct
   fields:
-  - name: SRC_SYS_CD2
+  - name: MATL_NUM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SRC_SYS_CD
     type: string
     nullable: false
     metadata:
