--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -386,6 +386,77 @@ pipelines:
       - datasets/MES_MD_SPEC
     subgraphs: []
     dependencies: {}
+  pipelines/PPLN_MES_MD_HIST_MNLINE_1:
+                name: PPLN_MES_MD_HIST_MNLINE_1_mec
+                description: Mapping pipeline  ['mec']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_HIST_MNLINE
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_HIST_MNLINE_2:
+                name: PPLN_MES_MD_HIST_MNLINE_2_cmw_mdy_mer
+                description: Mapping pipeline  ['cmw', 'mdy', 'mer']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_HIST_MNLINE
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_HIST_MNLINE_3:
+                name: PPLN_MES_MD_HIST_MNLINE_3_mvc
+                description: Mapping pipeline  ['mvc']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_HIST_MNLINE
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_HIST_MNLINE_4:
+                name: PPLN_MES_MD_HIST_MNLINE_4_meb_mem_mmt_mns
+                description: Mapping pipeline  ['meb', 'mem', 'mmt', 'mns']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_HIST_MNLINE
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_HIST_MNLINE_5:
+                name: PPLN_MES_MD_HIST_MNLINE_5_mei_mej_mes
+                description: Mapping pipeline  ['mei', 'mej', 'mes']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_HIST_MNLINE
+                dependencies: {}
+            
+
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
