--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -386,6 +386,48 @@ pipelines:
       - datasets/MES_MD_SPEC
     subgraphs: []
     dependencies: {}
+  pipelines/PPLN_MES_MD_MATL_QTY_HIST_DTL_1:
+                name: PPLN_MES_MD_MATL_QTY_HIST_DTL_1_mec_mem_mmt_mns
+                description: Mapping pipeline  ['mec', 'mem', 'mmt', 'mns']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_MATL_QTY_HIST_DTL
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_MATL_QTY_HIST_DTL_2:
+                name: PPLN_MES_MD_MATL_QTY_HIST_DTL_2_cmw_mvc_meb_mdy_mei_mer_mej_mes
+                description: Mapping pipeline  ['cmw', 'mvc', 'meb', 'mdy', 'mei', 'mer', 'mej', 'mes']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_MATL_QTY_HIST_DTL
+                dependencies: {}
+  pipelines/PPLN_MES_MD_MFG_CNTNR_PRIR_1:
+                name: PPLN_MES_MD_MFG_CNTNR_PRIR_1_meb_mei_mej_mes_mns
+                description: Mapping pipeline  ['meb', 'mei', 'mej', 'mes', 'mns']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_MFG_CNTNR_PRIR
+                dependencies: {}
+            
+     
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
