--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -386,6 +386,105 @@ pipelines:
       - datasets/MES_MD_SPEC
     subgraphs: []
     dependencies: {}
+  pipelines/PPLN_MES_MD_MFG_ORDR_1:
+                name: PPLN_MES_MD_MFG_ORDR_1_mec
+                description: Mapping pipeline  ['mec']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_MFG_ORDR
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_MFG_ORDR_2:
+                name: PPLN_MES_MD_MFG_ORDR_2_cmw_mdy_mer
+                description: Mapping pipeline  ['cmw', 'mdy', 'mer']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_MFG_ORDR
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_MFG_ORDR_3:
+                name: PPLN_MES_MD_MFG_ORDR_3_mvc
+                description: Mapping pipeline  ['mvc']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_MFG_ORDR
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_MFG_ORDR_4:
+                name: PPLN_MES_MD_MFG_ORDR_4_meb
+                description: Mapping pipeline  ['meb']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_MFG_ORDR
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_MFG_ORDR_5:
+                name: PPLN_MES_MD_MFG_ORDR_5_mei_mej_mes
+                description: Mapping pipeline  ['mei', 'mej', 'mes']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_MFG_ORDR
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_MFG_ORDR_6:
+                name: PPLN_MES_MD_MFG_ORDR_6_mem_mmt
+                description: Mapping pipeline  ['mem', 'mmt']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_MFG_ORDR
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_MFG_ORDR_7:
+                name: PPLN_MES_MD_MFG_ORDR_7_mns
+                description: Mapping pipeline  ['mns']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_MFG_ORDR
+                dependencies: {}
+            
+
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
