--- a/src/datasets/DS_JDE_01_F0401_adt/pbt_aspects.yml
+++ b/src/datasets/DS_JDE_01_F0401_adt/pbt_aspects.yml
@@ -2,7 +2,7 @@ version: 1
 schema:
   type: struct
   fields:
-  - name: ABAN8
+  - name: A6AN8
     type: string
     nullable: true
     metadata:
@@ -16,567 +16,588 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: ABALKY
+  - name: A6APC
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABTAX
+  - name: A6MCUP
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABALPH
+  - name: A6OBAP
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABDC
+  - name: A6AIDP
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABMCU
+  - name: A6KCOP
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABSIC
+  - name: A6DCAP
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABLNGP
+  - name: A6DTAP
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABAT1
+  - name: A6CRRP
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABCM
+  - name: A6TXA2
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABTAXC
+  - name: A6EXR2
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABAT2
+  - name: A6HDPY
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABAT3
+  - name: A6TXA3
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABAT4
+  - name: A6EXR3
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABAT5
+  - name: A6TAWH
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABATP
+  - name: A6PCWH
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABATR
+  - name: A6TRAP
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABATPR
+  - name: A6SCK
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABAB3
+  - name: A6PYIN
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABATE
+  - name: A6SNTO
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABSBLI
+  - name: A6AB1
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABEFTB
+  - name: A6FLD
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABAN81
+  - name: A6SQNL
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABAN82
+  - name: A6CRCA
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABAN83
+  - name: A6AYPD
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABAN84
+  - name: A6APPD
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABAN86
+  - name: A6ABAM
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABAN85
+  - name: A6ABA1
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABAC01
+  - name: A6APRC
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABAC02
+  - name: A6MINO
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABAC03
+  - name: A6MAXO
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABAC04
+  - name: A6AN8R
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABAC05
+  - name: A6BADT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABAC06
+  - name: A6CPGP
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABAC07
+  - name: A6ORTP
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABAC08
+  - name: A6INMG
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABAC09
+  - name: A6HOLD
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABAC10
+  - name: A6ROUT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABAC11
+  - name: A6STOP
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABAC12
+  - name: A6ZON
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABAC13
+  - name: A6ANCR
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABAC14
+  - name: A6CARS
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABAC15
+  - name: A6DEL1
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABAC16
+  - name: A6DEL2
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABAC17
+  - name: A6LTDT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABAC18
+  - name: A6FRTH
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABAC19
+  - name: A6INVC
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABAC20
+  - name: A6PLST
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABAC21
+  - name: A6WUMD
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABAC22
+  - name: A6VUMD
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABAC23
+  - name: A6PRP5
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABAC24
+  - name: A6EDPM
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABAC25
+  - name: A6EDCI
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABAC26
+  - name: A6EDII
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABAC27
+  - name: A6EDQD
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABAC28
+  - name: A6EDAD
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABAC29
+  - name: A6EDF1
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABAC30
+  - name: A6EDF2
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABGLBA
+  - name: A6VI01
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABPTI
+  - name: A6VI02
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABPDI
+  - name: A6VI03
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABMSGA
+  - name: A6VI04
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABRMK
+  - name: A6VI05
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABTXCT
+  - name: A6MNSC
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABTX2
+  - name: A6ATO
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABALP1
+  - name: A6RVNT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABURCD
+  - name: A6URCD
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABURDT
+  - name: A6URDT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABURAT
+  - name: A6URAT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABURAB
+  - name: A6URAB
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABURRF
+  - name: A6URRF
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABUSER
+  - name: A6USER
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABPID
+  - name: A6PID
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABUPMJ
+  - name: A6JOBN
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABJOBN
+  - name: A6UPMJ
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABUPMT
+  - name: A6UPMT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABCFRGUID
+  - name: A6ASN
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABCFRMKEY
+  - name: A6CRMD
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABCFRPID
+  - name: A6AVCH
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABCFRUSER
+  - name: A6CFRGUID
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABISDELETE
+  - name: A6CFRMKEY
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABCFRSEQN
+  - name: A6CFRPID
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: A6CFRUSER
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: A6ISDELETE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: A6CFRSEQN
     type: string
     nullable: true
     metadata:
